# img2ascii

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: affine.hpp.01970923B14FEE73.idx  all_indices.h.0D83E9DEDAE8968F.idx  allocator.h.45A7360B1B14E28D.idx  any.h.CCEE27D91D80C96E.idx  async.hpp.F00174D326E2EEB2.idx  autotuned_index.h.1C308815133F064F.idx  background_segm.hpp.FAC09FCCCEDCB674.idx  base.hpp.DAD532B698AB11B4.idx  blenders.hpp.A9A3906597710C32.idx  bufferpool.hpp.6DA168D25912990E.idx  calib3d.hpp.8274360737D5D744.idx  camera.hpp.8F7ED52BE437F32C.idx  check.hpp.EC5B3BC6FF657550.idx  composite_index.h.F2DE3DA44E971221.idx  config.h.13AF358562CCA874.idx  core.hpp.91D656D2BA174B74.idx  cuda.hpp.BE21BF0CB58A3536.idx  cuda.inl.hpp.FE2C37DC3A317C36.idx  cuda_types.hpp.6C67C94A61F2D585.idx  cv_cpu_dispatch.h.A6B0C753D6AB577F.idx  cvdef.h.0118E260CBBC5AB6.idx  cvstd.hpp.A9F1723825BB6D18.idx  cvstd.inl.hpp.16A4915B3617E76C.idx  cvstd_wrapper.hpp.4303E330F835BFBC.idx  defines.h.7C27421B9E3F6826.idx  detection_based_tracker.hpp.D2BF57A490FF1F46.idx  dict.hpp.193D3387EFDEA34B.idx  dist.h.9EBBC14C068976D7.idx  dnn.hpp.161219F8FAACD37D.idx  dnn.hpp.7BFBA2740BC3B910.idx  dnn.inl.hpp.5E5645AA1AE46619.idx  dynamic_bitset.h.607E480D239A4C15.idx  exposure_compensate.hpp.6AF7AEDBD9CF1309.idx  face.hpp.DBD2A0B01F98296E.idx  fast_math.hpp.F81B7088AB7AA419.idx  features2d.hpp.8BA2685A1DC53C27.idx  flann.hpp.82262659CA407777.idx  flann_base.hpp.D7387848E45BC84F.idx  general.h.ED9A42E967A87A6F.idx  (+61 more)
contrib/: CMakeLists.txt
src/: main.cpp
